Better card descriptions and fixed title spacing

--- a/Profile/client/styles/Imports/macaw.import.styl
+++ b/Profile/client/styles/Imports/macaw.import.styl
@@ -38,7 +38,7 @@ img_cover_mixin(url, top_spacing)
   background-repeat no-repeat
   background-size cover
   background-position 50% top_spacing
-  height 200px
+  height 280px
   width auto
 
 .project-microfluidics-image
@@ -68,7 +68,7 @@ img_cover_mixin(url, top_spacing)
   cursor pointer
 
 .description-container
-  height 150px
+  height 180px
   padding-right 15px
   padding-left 15px
   // Begin centering based on guide: http://www.w3.org/Style/Examples/007/center.en.html#block
